{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 333,
  "lineage": "ebbbae8d-5562-fde8-3432-7d86b1479c6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:396065845856:instance/i-09872b5afddd43647",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09872b5afddd43647",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7dadf9ea1762009",
            "private_dns": "ip-172-168-1-175.us-east-2.compute.internal",
            "private_ip": "172.168.1.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb7ebaae712b57c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3786c6c203920a0",
            "tags": {
              "Name": "terraform_server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b39a5fccf8e2510d"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:396065845856:instance/i-07057a715b178cc52",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07057a715b178cc52",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071791530c3f760e8",
            "private_dns": "ip-172-168-2-116.us-east-2.compute.internal",
            "private_ip": "172.168.2.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05373c2801a05109b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5f56dfe41dbe925",
            "tags": {
              "Name": "terraform_server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b39a5fccf8e2510d"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0ad6b70e61be944",
            "arn": "arn:aws:ec2:us-east-2:396065845856:instance/i-0293a626bb169ce3b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0293a626bb169ce3b",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df0648a8b3c93032",
            "private_dns": "ip-172-168-3-222.us-east-2.compute.internal",
            "private_ip": "172.168.3.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c05e1596c7f8dd1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076b9cd603d701547",
            "tags": {
              "Name": "terraform_server_3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b39a5fccf8e2510d"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:internet-gateway/igw-0750ca033b7b6ffe5",
            "id": "igw-0750ca033b7b6ffe5",
            "owner_id": "396065845856",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08f7af794836c66b4",
            "owner_id": "396065845856",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0750ca033b7b6ffe5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table"
            },
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0240d5f5ca09444be",
            "route_table_id": "rtb-08f7af794836c66b4",
            "subnet_id": "subnet-0c3786c6c203920a0"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f9be80b777945d0",
            "route_table_id": "rtb-08f7af794836c66b4",
            "subnet_id": "subnet-0b5f56dfe41dbe925"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018356f6e97e7e0c5",
            "route_table_id": "rtb-08f7af794836c66b4",
            "subnet_id": "subnet-076b9cd603d701547"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:security-group/sg-01f9b23c8f64ac42b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f9b23c8f64ac42b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "396065845856",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:subnet/subnet-0c3786c6c203920a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.168.1.0/24",
            "id": "subnet-0c3786c6c203920a0",
            "map_public_ip_on_launch": false,
            "owner_id": "396065845856",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-1"
            },
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:subnet/subnet-0b5f56dfe41dbe925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.168.2.0/24",
            "id": "subnet-0b5f56dfe41dbe925",
            "map_public_ip_on_launch": false,
            "owner_id": "396065845856",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-2"
            },
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:subnet/subnet-076b9cd603d701547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.168.3.0/24",
            "id": "subnet-076b9cd603d701547",
            "map_public_ip_on_launch": false,
            "owner_id": "396065845856",
            "tags": {
              "Name": "terraform-aws-testing-Subnet-3"
            },
            "vpc_id": "vpc-0fa7580b4ef7b408b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396065845856:vpc/vpc-0fa7580b4ef7b408b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-0991a96fc32891ff8",
            "default_route_table_id": "rtb-0c5ec573619cf1f26",
            "default_security_group_id": "sg-0b39a5fccf8e2510d",
            "dhcp_options_id": "dopt-1ca12b77",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fa7580b4ef7b408b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c5ec573619cf1f26",
            "owner_id": "396065845856",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "Yashwanth Buddha",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}